--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* General */
 :root {
     --very-ligth-pink: #C7C7C7;
     --text-input-field: #F7F7F7;
@@ -12,11 +13,11 @@ body {
     margin: 0;
     font-family: 'Quicksand', sans-serif;
 }
-
 .inactive {
     display: none;
 }
 
+/* Navbar (General) */
 nav {
     display: flex;
     justify-content: space-between;
@@ -25,6 +26,7 @@ nav {
 }
 .menu {
     display: none;
+    cursor: pointer;
 }
 .logo {
     width: 100px;
@@ -65,6 +67,7 @@ nav {
 }
 .navbar-shopping-cart {
     position: relative;
+    cursor: pointer;
 }
 .navbar-shopping-cart div {
     width: 16px;
@@ -82,6 +85,7 @@ nav {
     align-items: center;
 }
 
+/* Menu en Desktop */
 .desktop-menu {
     position: absolute;
     background: var(--white);
@@ -120,6 +124,115 @@ nav {
     display: inline-block;
 }
 
+/* Menu en mobile */
+.mobile-menu {
+    background-color: var(--white);
+    position: absolute;
+    top: 60px;
+    padding: 24px;
+}
+.mobile-menu a {
+    text-decoration: none;
+    color: var(--black);
+    font-weight: bold;
+    /* margin-bottom: 24px; */
+}
+.mobile-menu ul {
+    padding: 0;
+    margin: 24px 0 0;
+    list-style: none;
+}
+.mobile-menu ul:nth-child(1){
+    border-bottom: 1px solid var(--very-ligth-pink);
+}
+.mobile-menu ul li {
+     margin-bottom: 24px;
+}
+.email {
+    font-size: var(--sm);
+    font-weight: 300 !important;
+} 
+.sign-out {
+    font-size: var(--sm);
+    color: var(--hospital-green) !important;
+}
+
+/*Aside (product detail y carrito)*/
+.product-detail {
+    background-color: var(--white);
+    width: 360px;
+    padding: 0 24px;
+    box-sizing: border-box;
+    position: absolute;
+    right: 0;
+}
+.tittle-container {
+    display: flex;
+}
+.tittle-container img {
+    transform: rotate(180deg);
+    margin-right: 14px;
+}
+.tittle {
+    font-size: var(--lg);
+    font-weight: bold;
+}
+.order {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    gap: 16px;
+    align-items: center;
+    background-color: var(--text-input-field);
+    margin-bottom: 24px;
+    border-radius: 8px;
+    padding: 0 24px;     
+}
+.order p:nth-child(1) {
+    display: flex;
+    flex-direction: column;
+}
+.order p span:nth-child(1) {
+    font-size: var(--md);
+    font-weight: bold;
+}
+.order p:nth-child(2) {
+    text-align: end;
+    font-weight: bold;
+}
+.shopping-card {
+    display: grid;
+    grid-template-columns: auto 1fr auto auto;
+    gap: 16px;
+    margin-bottom: 24px;
+    align-items: center;
+}
+.shopping-card figure {
+    margin: 0;
+}
+.shopping-card figure img {
+    width: 100px;
+    height: 100px;
+    border-radius: 20px;
+    object-fit: cover;
+}
+.shopping-card p:nth-child(2) {
+    color: var(--very-ligth-pink);
+}
+.shopping-card p:nth-child(3) {
+    font-size: var(--md);
+    font-weight: bold;
+} 
+.primary-button {
+   background-color: var(--hospital-green);
+   border-radius: 8px;
+   border: none;
+   color: var(--white);
+   width: 100%;
+   cursor: pointer;
+   font-size: var(--md);
+   font-weight: bold;
+   height: 50px;
+}
 
 @media (max-width: 640px) {
     .menu {
@@ -129,6 +242,18 @@ nav {
         display: none;
     }
     .navbar-email {
+        display: none;
+    }
+    .desktop-menu {
+        display: none;
+    }
+    .product-detail {
+        width: 100%;
+    }
+}
+
+@media (min-width: 641px) {
+    .mobile-menu {
         display: none;
     }
 }
