--- a/style.css
+++ b/style.css
@@ -356,7 +356,7 @@ aside {
     .desktop-menu {
         display: none;
     }
-    .product-detail {
+    #productDetail {
         width: 100%;
     }
     .cards-container {
@@ -372,6 +372,9 @@ aside {
         height: 140px;
         border-radius: 20px;
         object-fit: cover;
+    }
+    #shoppingCartContainer {
+        width: 100%;
     }
 }
 
